--- a/public/index.html
+++ b/public/index.html
@@ -42,5 +42,6 @@
       To begin the development, run `npm start` or `yarn start`.
       To create a production bundle, use `npm run build` or `yarn build`.
     -->
+    <img src="https://images.ladbible.com/thumbnail?type=jpeg&url=http://beta.ems.ladbiblegroup.com/s3/content/4c1b6e055de54e86496e90c1d569d1cb.png&quality=70&width=720">
   </body>
 </html>
